doc/Grammar.ebnf
tc-line         ::= item, EOL;
item            ::= assignment | expr ;
assignment      ::= identifier '=' expr ;
identifier      ::= [a-zA-Z_][a-zA-Z_0-9]* ;
expr            ::= add-expr ;
add-expr        ::= mul-expr | add-expr add-op mul-expr ;
add-op          ::= '+' | '-' ;
mul-expr        ::= unary-expr | mul-expr mul-op unary-expr
mul-op          ::= '*' | '/' | '%' ;
unary-expr      ::= primary | unary-op primary ;
unary-op        ::= '+' | '-' ;
primary         ::= number | '(' expr ')' | identifier | call-expr ;
number          ::= [0-9]+(.[0-9]+)? | '.'[0-9]+ ;
call-expr       ::= identifier '(' argument-list ? ')' ;
argument-list   ::= expr (',' expr)* ;
